ConfigSuite: Instantiate class via getDeclaredConstructor()
ErrorProne reports a warning [1] about bypassing exception checking
by instantiation with direct call to #newInstance. It also mentions
that #newInstance is to be deprecated from Java 9.

[1] http://errorprone.info/bugpattern/ClassNewInstance

Change-Id: Id20631933bce8ab320dd5e321336bad9e181cfa0